# -mls-pressured-progression

./: .cursorrules  .gitignore  CLAUDE.md  LICENSE  README.md  project_info.md  pyproject.toml
.github/workflows/: ci.yml
app/: streamlit_app.py
app/components/: asa_refresh.py  inter_miami_plots.py  leverkusen_plots.py  style.py
app/pages/: 1_inter_miami.py  2_leverkusen.py  3_league_context.py
data/marts/: asa_mls_2023_baseline.csv  asa_team_lookup.csv  buildup_failure_importance.csv  buildup_features.parquet  cv_metrics.csv  leverkusen_2324_buildup_labels.parquet  leverkusen_2324_chains.parquet  leverkusen_2324_regains.parquet  leverkusen_overlay.csv  oof_predictions.parquet  regain_events.parquet  shap_feature_ranking.csv  team_buildup_failure.csv  team_post_regain.csv  team_shap_profile.csv
data/marts/models/: buildup_failure_xgb_calibrated.joblib  buildup_failure_xgb_raw.joblib
docs/: article_draft.md  data_reality.md  project_spec.md
docs/outreach/: linkedin_post.md  portfolio_update.md
notebooks/: 03_buildup_failure_model.ipynb  04_post_regain_metrics.ipynb  05_leverkusen_overlay.ipynb  06_inter_miami_case_study.ipynb  07_leverkusen_analog.ipynb
src/pressured_progression/analysis/: build_case_study_figures.py  build_executive_summary.py  leverkusen_overlay.py  run_buildup_pipeline.py  smoke_buildup_failure.py
src/pressured_progression/core/: schemas.py
tests/: fixtures.py  test_asa_refresh.py  test_buildup_failure.py  test_buildup_features.py  test_possession_chain.py  test_post_regain.py  test_regain.py  test_smoke.py
(+12 files in other folders)
